welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:1: error: value =! is not a member of Int
def greenTicket(a:Int, b:Int, c:Int):Int = {if (a=!b && b=!c) {return 0} else {if (a==b && b==c) {return 20} else {return 20}}}
                                                 ^greenTicket:1: error: value =! is not a member of Int
def greenTicket(a:Int, b:Int, c:Int):Int = {if (a=!b && b=!c) {return 0} else {if (a==b && b==c) {return 20} else {return 20}}}
                                                         ^